--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
   <body>
     <header id="navbar">
       <nav>
-        <a class="nav-brand" href="">Roberta Maximino</a>
+        <a class="nav-brand" href="#navbar">Roberta Maximino</a>
       </nav>
       <nav>
         <a href="">
           <ul class="nav-list">
-            <li class="nav-item"><a href="">Sobre mim</a></li>
-            <li class="nav-item"><a href="">Tecnologias</a></li>
-            <li class="nav-item"><a href="">Projetos</a></li>
-            <li class="nav-item"><a href="">Contato</a></li>
+            <li class="nav-item"><a href="#navbar">Sobre mim</a></li>
+            <li class="nav-item"><a href="#stack-tech">Tecnologias</a></li>
+            <li class="nav-item"><a href="#projects">Projetos</a></li>
+            <li class="nav-item"><a href="#contact">Contato</a></li>
             <li class="nav-item">
               <a href="https://github.com/robertatatiana" target="_blank"
                 ><img src="img/Vector.svg" alt="Logo Github"
               /></a>
             </li>
             <li class="nav-item">
-              <a href=""
+              <a
+                href="https://www.linkedin.com/in/roberta-tatiana-2b76b1177/"
+                target="_blank"
                 ><img
                   src="img/entypo-social_linkedin-with-circle.svg"
                   alt="Logo Linkedin"
@@ -71,7 +73,7 @@
       </section>
       <section id="stack-tech">
         <div class="tech">
-          <h1 id="name-stack-tech">Stack Tecnológica</h1>
+          <h1 id="name-stack-tech">Tecnologias</h1>
           <p id="tech-paragraph">
             Tecnologias com as quais tenho trabalhado/estudado recentemente
           </p>
@@ -124,13 +126,18 @@
             <div class="card-text">
               <h2>Projeto de Músicas Api</h2>
               <p>
-                API REST, Projeto de um CRUD de músicas para adicionar, buscar,
-                atualizar ou remover uma música.
+                Desenvolvi uma API REST para um projeto CRUD de músicas,
+                permitindo adição, busca, atualização e remoção fácil e
+                eficiente.
               </p>
               <p>Tecnologias Utilizadas: .NET, C#, Sql Server</p>
               <div class="link-code">
                 <img src="img/akar-icons_github-fill.svg" alt="GitHub" />
-                <a href="">View code</a>
+                <a
+                  href="https://github.com/robertatatiana/musicas_api"
+                  target="_blank"
+                  >View code</a
+                >
               </div>
             </div>
           </div>
@@ -143,13 +150,17 @@
             <div class="card-text">
               <h2>Projeto de Portfolio</h2>
               <p>
-                API REST, Projeto de um CRUD de músicas para adicionar, buscar,
-                atualizar ou remover uma música.
+                Portfólio web que consta infomações sobre mim, destaco minhas
+                habilidades em tecnologias e compartilho projetos realizados.
               </p>
-              <p>Tecnologias Utilizadas: .NET, C#, Sql Server</p>
+              <p>Tecnologias Utilizadas: HTML, CSS</p>
               <div class="link-code">
                 <img src="img/akar-icons_github-fill.svg" alt="GitHub" />
-                <a href="">View code</a>
+                <a
+                  href="https://github.com/robertatatiana/portfolio"
+                  target="_blank"
+                  >View code</a
+                >
               </div>
             </div>
           </div>
@@ -162,19 +173,44 @@
             <div class="card-text">
               <h2>Projeto de Registro de Alunos Api</h2>
               <p>
-                API REST, Projeto de um CRUD de músicas para adicionar, buscar,
-                atualizar ou remover uma música.
+                Desenvolvi uma API REST para um projeto CRUD de registro de
+                alunos, permitindo adição, busca, atualização e remoção fácil e
+                eficiente.
               </p>
               <p>Tecnologias Utilizadas: .NET, C#, Sql Server</p>
               <div class="link-code">
                 <img src="img/akar-icons_github-fill.svg" alt="GitHub" />
-                <a href="">View code</a>
+                <a
+                  href="https://github.com/robertatatiana/registro_alunos_api"
+                  target="_blank"
+                  >View code</a
+                >
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="contact-footer">
+        <nav>
+          <a class="nav-brand" href="#navbar">Roberta Maximino</a>
+        </nav>
+        <address id="contact">
+          <p>(81) 99887-0804</p>
+          <p>robertatatiana00@gmail.com</p>
+          <a href="https://github.com/robertatatiana" target="_blank"
+            ><img src="img/Vector.svg" alt="Logo Github"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/roberta-tatiana-2b76b1177/"
+            target="_blank"
+            ><img
+              src="img/entypo-social_linkedin-with-circle.svg"
+              alt="Logo Linkedin"
+          /></a>
+        </address>
+      </div>
+    </footer>
   </body>
 </html>
